--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,23 @@
 <!DOCTYPE html>
 <html lang="end" style="height: 100%;">
-  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
     <head>
+      <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
+      <title>Full Stack LaCroix</title>
+      <meta
+        name="description"
+        content="LaCroix when you want, how you want."
+      />
+      <meta name="twitter:card" content="summary_large_image" />
+      <meta name="twitter:domain" value="fullstacklacroix.netlify.app" />
+      <meta name="twitter:title" content="Full Stack LaCroix" />
+      <meta name="twitter:description" value="LaCroix when you want, how you want." />
+      <meta name="twitter:image" content="https://fullstacklacroix.netlify.app/static/banner.jpg" />
+      <meta name="twitter:url" value="https://fullstacklacroix.netlify.app/" />
+      <meta property="og:type" content="website" />
+      <meta property="og:title" content="LaCroix when you want, how you want">
+      <meta property="og:description" content="LaCroix when you want, how you want." />
+      <meta property="og:image" content="https://fullstacklacroix.netlify.app/static/banner.jpg" />
+      <meta property="og:url" content="https://fullstacklacroix.netlify.app" />
       <meta charset="utf-8">
       <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     </head>
